@@ -12,18 +12,14 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 
-import static com.iot.project.com.iot.project.exception.ConstantsExceptions.BAD_REQUEST_LOCATION_SERVICE;
-import static com.iot.project.com.iot.project.exception.ConstantsExceptions.ENTITY_NOT_FOUND_BY_COMPANY;
-import static com.iot.project.com.iot.project.exception.ConstantsExceptions.RESOURCE_NOT_FOUND;
+import static com.iot.project.com.iot.project.exception.ConstantsExceptions.*;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
-public class LocationServiceTest {
+class LocationServiceTest {
 
     @Mock
     private LocationRepository locationRepository;
@@ -32,194 +28,137 @@ public class LocationServiceTest {
     private LocationService locationService;
 
     @Test
-    public void testGetAllLocations() {
-        Long companyId = 1L;
-        List<Location> locations = Arrays.asList(
-                Location.builder().locationName("locationName1").companyId(companyId).build(),
-                Location.builder().locationName("locationName2").companyId(companyId).build()
+    void getAllLocationsReturnsListFromRepository() {
+        Long companyId = 10L;
+        List<Location> expected = List.of(
+                Location.builder().locationId(1L).companyId(companyId).build(),
+                Location.builder().locationId(2L).companyId(companyId).build()
         );
-        when(locationRepository.findAllByCompanyId(companyId)).thenReturn(locations);
-
-        List<Location> result = locationService.getAllLocations(companyId);
-
-        assertEquals(2, result.size());
-        verify(locationRepository).findAllByCompanyId(companyId);
+        when(locationRepository.findAllByCompanyIdOrderByLocationIdAsc(companyId))
+                .thenReturn(expected);
+        assertEquals(expected, locationService.getAllLocations(companyId));
     }
 
     @Test
-    public void testGetLocationByIdFound() {
-        Long companyId = 1L;
-        Long locationId = 100L;
-        Location location = Location.builder()
-                .locationName("locationName")
-                .locationAddress("locationAddress")
-                .locationCountry("locationCountry")
-                .locationCity("locationCity")
-                .locationMeta("locationMeta")
+    void getLocationByIdReturnsWhenCompanyMatches() {
+        Long companyId = 5L;
+        Location loc = Location.builder().locationId(1L).companyId(companyId).build();
+        when(locationRepository.findById(1L)).thenReturn(Optional.of(loc));
+        assertEquals(loc, locationService.getLocationById(1L, companyId));
+    }
+
+    @Test
+    void getLocationByIdThrowsNotFoundWhenIdMissing() {
+        when(locationRepository.findById(1L)).thenReturn(Optional.empty());
+        NotFoundException ex = assertThrows(NotFoundException.class,
+                () -> locationService.getLocationById(1L, 5L));
+        assertEquals(LOCATION_ID_NOT_FOUND, ex.getMessage());
+    }
+
+    @Test
+    void getLocationByIdThrowsBadRequestWhenCompanyMismatch() {
+        Location loc = Location.builder().locationId(1L).companyId(2L).build();
+        when(locationRepository.findById(1L)).thenReturn(Optional.of(loc));
+        BadRequestException ex = assertThrows(BadRequestException.class,
+                () -> locationService.getLocationById(1L, 3L));
+        assertEquals(BAD_REQUEST_LOCATION_SERVICE, ex.getMessage());
+    }
+
+    @Test
+    void createLocationSavesAndReturnsEntity() {
+        Long companyId = 7L;
+        CreateLocationRequest req = CreateLocationRequest.builder()
+                .locationName("LocA")
+                .locationAddress("Addr")
+                .locationCountry("CL")
+                .locationCity("Santiago")
+                .locationMeta("m")
+                .build();
+        Location toSave = Location.builder()
+                .locationName(req.getLocationName())
+                .locationAddress(req.getLocationAddress())
+                .locationCountry(req.getLocationCountry())
+                .locationCity(req.getLocationCity())
+                .locationMeta(req.getLocationMeta())
                 .companyId(companyId)
                 .build();
-        when(locationRepository.findById(locationId)).thenReturn(Optional.of(location));
-
-        Location result = locationService.getLocationById(locationId, companyId);
-
-        assertNotNull(result);
-        assertEquals("locationName", result.getLocationName());
-        assertEquals("locationAddress", result.getLocationAddress());
-        verify(locationRepository).findById(locationId);
+        when(locationRepository.save(any(Location.class))).thenReturn(toSave);
+        Location result = locationService.createLocation(req, companyId);
+        assertEquals(toSave, result);
     }
 
     @Test
-    public void testGetLocationByIdNotFound() {
-        Long companyId = 1L;
-        Long locationId = 100L;
-        when(locationRepository.findById(locationId)).thenReturn(Optional.empty());
-
-        NotFoundException exception = assertThrows(NotFoundException.class, () ->
-                locationService.getLocationById(locationId, companyId)
-        );
-        assertEquals(RESOURCE_NOT_FOUND, exception.getMessage());
-        verify(locationRepository).findById(locationId);
-    }
-
-    @Test
-    public void testGetLocationByIdCompanyMismatch() {
-        Long companyId = 1L;
-        Long wrongCompanyId = 2L;
-        Long locationId = 100L;
-        Location location = Location.builder()
-                .locationName("locationName")
-                .companyId(wrongCompanyId)
+    void updateLocationReturnsUpdatedWhenCompanyMatches() {
+        Long companyId = 8L;
+        UpdateLocationRequest req = UpdateLocationRequest.builder()
+                .locationName("New")
+                .locationAddress("NewAddr")
+                .locationCountry("PE")
+                .locationCity("Lima")
+                .locationMeta("x")
                 .build();
-        when(locationRepository.findById(locationId)).thenReturn(Optional.of(location));
-
-        BadRequestException exception = assertThrows(BadRequestException.class, () ->
-                locationService.getLocationById(locationId, companyId)
-        );
-        assertEquals(BAD_REQUEST_LOCATION_SERVICE, exception.getMessage());
-        verify(locationRepository).findById(locationId);
-    }
-
-    @Test
-    public void testCreateLocation() {
-        Long companyId = 1L;
-        CreateLocationRequest request = CreateLocationRequest.builder()
-                .locationName("locationName")
-                .locationAddress("locationAddress")
-                .locationCountry("locationCountry")
-                .locationCity("locationCity")
-                .locationMeta("locationMeta")
-                .build();
-
-        Location savedLocation = Location.builder()
-                .locationName(request.getLocationName())
-                .locationAddress(request.getLocationAddress())
-                .locationCountry(request.getLocationCountry())
-                .locationCity(request.getLocationCity())
-                .locationMeta(request.getLocationMeta())
+        Location existing = Location.builder()
+                .locationId(1L)
                 .companyId(companyId)
+                .locationName("Old")
                 .build();
-        when(locationRepository.save(any(Location.class))).thenReturn(savedLocation);
-
-        Location result = locationService.createLocation(request, companyId);
-
-        assertNotNull(result);
-        assertEquals("locationName", result.getLocationName());
-        assertEquals("locationAddress", result.getLocationAddress());
-        verify(locationRepository).save(any(Location.class));
+        when(locationRepository.findById(1L)).thenReturn(Optional.of(existing));
+        when(locationRepository.save(existing)).thenReturn(existing);
+        Location result = locationService.updateLocation(1L, req, companyId);
+        assertEquals(req.getLocationName(), result.getLocationName());
+        assertEquals(req.getLocationAddress(), result.getLocationAddress());
+        assertEquals(req.getLocationCountry(), result.getLocationCountry());
+        assertEquals(req.getLocationCity(), result.getLocationCity());
+        assertEquals(req.getLocationMeta(), result.getLocationMeta());
     }
 
     @Test
-    public void testUpdateLocationValid() {
-        Long companyId = 1L;
-        Long locationId = 100L;
-        UpdateLocationRequest request = UpdateLocationRequest.builder()
-                .locationName("updatedLocationName")
-                .locationAddress("updatedLocationAddress")
-                .locationCountry("updatedLocationCountry")
-                .locationCity("updatedLocationCity")
-                .locationMeta("updatedLocationMeta")
-                .build();
-
-        Location existingLocation = Location.builder()
-                .locationName("oldLocationName")
-                .locationAddress("oldLocationAddress")
-                .locationCountry("oldLocationCountry")
-                .locationCity("oldLocationCity")
-                .locationMeta("oldLocationMeta")
-                .companyId(companyId)
-                .build();
-
-        when(locationRepository.findById(locationId)).thenReturn(Optional.of(existingLocation));
-        when(locationRepository.save(existingLocation)).thenReturn(existingLocation);
-
-        Location result = locationService.updateLocation(locationId, request, companyId);
-
-        assertNotNull(result);
-        assertEquals("updatedLocationName", result.getLocationName());
-        assertEquals("updatedLocationAddress", result.getLocationAddress());
-        assertEquals("updatedLocationCountry", result.getLocationCountry());
-        assertEquals("updatedLocationCity", result.getLocationCity());
-        assertEquals("updatedLocationMeta", result.getLocationMeta());
-        verify(locationRepository).findById(locationId);
-        verify(locationRepository).save(existingLocation);
+    void updateLocationThrowsNotFoundWhenIdMissing() {
+        when(locationRepository.findById(1L)).thenReturn(Optional.empty());
+        NotFoundException ex = assertThrows(NotFoundException.class,
+                () -> locationService.updateLocation(1L,
+                        UpdateLocationRequest.builder().build(), 1L));
+        assertEquals(LOCATION_ID_NOT_FOUND, ex.getMessage());
     }
 
     @Test
-    public void testUpdateLocationCompanyMismatch() {
-        Long companyId = 1L;
-        Long wrongCompanyId = 2L;
-        Long locationId = 100L;
-        UpdateLocationRequest request = UpdateLocationRequest.builder()
-                .locationName("updatedLocationName")
-                .locationAddress("updatedLocationAddress")
-                .locationCountry("updatedLocationCountry")
-                .locationCity("updatedLocationCity")
-                .locationMeta("updatedLocationMeta")
+    void updateLocationThrowsNotFoundWhenCompanyMismatch() {
+        Long companyId = 9L;
+        Location existing = Location.builder()
+                .locationId(1L)
+                .companyId(5L)
                 .build();
-
-        Location existingLocation = Location.builder()
-                .locationName("oldLocationName")
-                .companyId(wrongCompanyId)
-                .build();
-        when(locationRepository.findById(locationId)).thenReturn(Optional.of(existingLocation));
-
-        NotFoundException exception = assertThrows(NotFoundException.class, () ->
-                locationService.updateLocation(locationId, request, companyId)
-        );
-        assertEquals("Location " + ENTITY_NOT_FOUND_BY_COMPANY, exception.getMessage());
-        verify(locationRepository).findById(locationId);
+        when(locationRepository.findById(1L)).thenReturn(Optional.of(existing));
+        NotFoundException ex = assertThrows(NotFoundException.class,
+                () -> locationService.updateLocation(1L,
+                        UpdateLocationRequest.builder().build(), companyId));
+        assertEquals(LOCATION_NOT_FOUND_FOR_COMPANY, ex.getMessage());
     }
 
     @Test
-    public void testDeleteLocationValid() {
-        Long companyId = 1L;
-        Long locationId = 100L;
-        Location location = Location.builder()
-                .locationName("locationName")
-                .companyId(companyId)
-                .build();
-        when(locationRepository.findById(locationId)).thenReturn(Optional.of(location));
-
-        assertDoesNotThrow(() -> locationService.deleteLocation(locationId, companyId));
-        verify(locationRepository).findById(locationId);
-        verify(locationRepository).delete(location);
+    void deleteLocationReturnsWhenCompanyMatches() {
+        Long companyId = 4L;
+        Location loc = Location.builder().locationId(2L).companyId(companyId).build();
+        when(locationRepository.findById(2L)).thenReturn(Optional.of(loc));
+        Location result = locationService.deleteLocation(2L, companyId);
+        assertEquals(loc, result);
+        verify(locationRepository).delete(loc);
     }
 
     @Test
-    public void testDeleteLocationCompanyMismatch() {
-        Long companyId = 1L;
-        Long wrongCompanyId = 2L;
-        Long locationId = 100L;
-        Location location = Location.builder()
-                .locationName("locationName")
-                .companyId(wrongCompanyId)
-                .build();
-        when(locationRepository.findById(locationId)).thenReturn(Optional.of(location));
+    void deleteLocationThrowsNotFoundWhenIdMissing() {
+        when(locationRepository.findById(3L)).thenReturn(Optional.empty());
+        NotFoundException ex = assertThrows(NotFoundException.class,
+                () -> locationService.deleteLocation(3L, 1L));
+        assertEquals(LOCATION_ID_NOT_FOUND, ex.getMessage());
+    }
 
-        BadRequestException exception = assertThrows(BadRequestException.class, () ->
-                locationService.deleteLocation(locationId, companyId)
-        );
-        assertEquals(BAD_REQUEST_LOCATION_SERVICE, exception.getMessage());
-        verify(locationRepository).findById(locationId);
+    @Test
+    void deleteLocationThrowsBadRequestWhenCompanyMismatch() {
+        Location loc = Location.builder().locationId(5L).companyId(2L).build();
+        when(locationRepository.findById(5L)).thenReturn(Optional.of(loc));
+        BadRequestException ex = assertThrows(BadRequestException.class,
+                () -> locationService.deleteLocation(5L, 3L));
+        assertEquals(LOCATION_NOT_FOUND_FOR_COMPANY, ex.getMessage());
     }
 }
